@@ -9,7 +9,7 @@ Mojo::SQLite - A tiny Mojolicious wrapper for SQLite
   use Mojo::SQLite;
 
   # Create a table
-  my $sql = Mojo::SQLite->new('test.db');
+  my $sql = Mojo::SQLite->new(Mojo::URL->new->scheme('file')->path($filename));
   $sql->db->query('create table names (id integer primary key autoincrement, name text)');
 
   # Insert a few rows
@@ -108,7 +108,8 @@ L<Mojo::SQLite> implements the following attributes.
   my $dsn = $sql->dsn;
   $sql    = $sql->dsn('dbi:SQLite:uri=file:foo.db');
 
-Data source name, defaults to a temporary file.
+Data source name, defaults to a C<dbi:SQLite:uri=> followed by a URI to a
+temporary file.
 
 =head2 max_connections
 
@@ -163,7 +164,9 @@ gracefully by holding on to it only for short amounts of time.
   $sql = $sql->from_string('file:test.db');
 
 Parse configuration from connection string. The optional scheme must be
-C<file>, and the hostname must be C<localhost> if specified.
+C<file>, and the hostname must be C<localhost> if specified. Connection strings
+are parsed as URIs, so you should construct them using a module like
+L<Mojo::URL> or L<URI::file>.
 
   # Absolute filename
   $sql->from_string('file:///home/fred/data.db');
@@ -177,6 +180,10 @@ C<file>, and the hostname must be C<localhost> if specified.
   $sql->from_string('file:data.db');
   $sql->from_string('data.db');
 
+  # Filenames may contain special characters
+  $sql->from_string(Mojo::URL->new->scheme('file')->path($filename));
+  $sql->from_string(URI::file->new($filename));
+
   # Temporary file database (default)
   $sql->from_string(':temp:');
 
@@ -185,6 +192,7 @@ C<file>, and the hostname must be C<localhost> if specified.
 
   # Additional options
   $sql->from_string('data.db?PrintError=1&sqlite_allow_multiple_statements=1');
+  $sql->from_string(Mojo::URL->new->scheme('file')->path($filename)->query(PrintError => 1));
 
 =head2 new
 
